Web Api Treasurer, AOP. works, closes #37, #38
