# wep_api/controllers/Treasurer.js
@@ -1,28 +1,60 @@
-module.exports.balance = async function balance(req, res) {
-    const op_id = req.ctx.op_id();
+module.exports = {
+    balance,
+    deposit,
+    withdraw
+};
+
+async function balance(req, res) {
+    const Treasurer = req.ctx.Treasurer;
+    const ctx = req.ctx.treasurer_ctx;
+
     const params = {
-        op_id,
+        op_id: req.op_id,
         account_id: req.swagger.params.account_id.value
     };
-    const account = await req.ctx.Treasurer.balance(req.ctx.treasurer_ctx, params);
-    
-    const resp = {
-        op_id,
-        account_brief: {
-            id: account.value._id, // TODO add earlier _id -> id
-            balance: account.value.balance.toString()
-        }
+    const account = await Treasurer.balance(ctx, params);
+    const response = _compose_response(account);
+    return res.json(response);
+}
+
+async function deposit(req, res) {
+    const Treasurer = req.ctx.Treasurer,
+        ctx = req.ctx.treasurer_ctx,
+        body = req.swagger.params.body.value;
+
+    const params = {
+        op_id: req.op_id,
+        account_id: body.account_id,
+        incoming: body.incoming,
     };
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(resp, null, 2));
+    const account = await Treasurer.deposit(ctx, params);
+    const response = _compose_response(account);
+    return res.json(response);
+}
+
+async function withdraw(req, res) {
+    const Treasurer = req.ctx.Treasurer,
+        ctx = req.ctx.treasurer_ctx,
+        body = req.swagger.params.body.value;
+
+    const params = {
+        op_id: req.op_id,
+        account_id: body.account_id,
+        outgoing: body.outgoing,
+    };
+    const account = await Treasurer.withdraw(ctx, params);
+    const response = _compose_response(account);
+    return res.json(response);
 };
 
-module.exports.deposit = function deposit(req, res) {
-    Treasurer.deposit(req.swagger.params, res);
-};
-
-module.exports.withdraw = function withdraw(req, res) {
-    Treasurer.withdraw(req.swagger.params, res);
-};
-
-// req.ctx.log(req.swagger.params);
+/**
+ * @private
+ */
+function _compose_response(account) {
+    return Object.freeze({
+        account_brief: {
+            id: account._id,
+            balance: parseFloat(account.balance.toString())
+        }
+    });
+}
